WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
57358
Reproducible crash running under libgmalloc, in -[WKView(Internal) removeTrackingRect:] --> objc_assign_ivar_non_gc
https://bugs.webkit.org/show_bug.cgi?id=57358
Summary
Reproducible crash running under libgmalloc, in -[WKView(Internal) removeTrac...
Sam Weinig
Reported
2011-03-29 10:25:11 PDT
Reproducible crash running under libgmalloc, in -[WKView(Internal) removeTrackingRect:] --> objc_assign_ivar_non_gc
Attachments
Patch
(2.08 KB, patch)
2011-03-29 10:29 PDT
,
Sam Weinig
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2011-03-29 10:29:16 PDT
Created
attachment 87357
[details]
Patch
Sam Weinig
Comment 2
2011-03-29 10:36:03 PDT
Committed
r82276
: <
http://trac.webkit.org/changeset/82276
>
WebKit Review Bot
Comment 3
2011-03-29 11:12:36 PDT
http://trac.webkit.org/changeset/82276
might have broken Leopard Intel Debug (Tests)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug